# lattice-api

./: README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/routers/: prompt.py  scene.py
app/services/: __init__.py  cif.py  scene.py
examples/: scene.json  structure.json
lattice_api/: __init__.py  _cli.py  main.py  models.py
lattice_api/routers/: __init__.py  export.py  health.py  prompt.py  scene.py
lattice_api/services/: cif.py  prompt_gen.py  scene.py  workflows.py
scripts/: coverage_summary.py
tests/: test_api.py  test_cif.py  test_scene.py
tests/data/: si.cif
tools/: cif_to_scene.py
