[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-api"
version = "0.1.0"
description = "FastAPI service to convert CIF to Crystal Toolkit Scene JSON and related endpoints."
authors = [{name = "Zijian", email = "guozijn@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pydantic>=2.4",
  "pymatgen>=2024.3",
  "crystal-toolkit>=2024.1",
  "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff", "mypy"]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
serve = "lattice_api._cli:serve"

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = ["lattice_api"]
